# Timer_Camera_X_test

TimerX_cam_test/: CMakeLists.txt  sdkconfig
TimerX_cam_test/main/: CMakeLists.txt  app_main.cpp  camera_func.cpp
